@@ -33,7 +33,12 @@ CHANGELOG
 - Changed the logic behind #include_next. It now starts searching with the 
   next directory after the directory the current file (the file containing the 
   #include_next directive) is located in.
-  
+- Changed the signature of the undefined_macro preprocessing hook to take the 
+  token itself and not the macro name only. This is important to pass the full
+  context information about the position of the #undef directive to the 
+  user provided hook (thanks to Stefan Seefeld for pointing that out).
+- Fixed several broken links in the Context Policy topic.
+
 Mon Feb 21 09:30:04 WEST 2005
 Version 1.1.14 (Fixes in response to the Boost review)
 
